[gd_scene load_steps=3 format=3 uid="uid://1eeemy18wgha"]

[ext_resource type="FontFile" uid="uid://dsuxqeqlgup2i" path="res://fonts/xolonium-regular.ttf" id="1_dnd51"]
[ext_resource type="Script" path="res://hud.gd" id="1_goxvh"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_goxvh")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -236.0
offset_right = 236.0
offset_bottom = 64.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_dnd51")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -191.5
offset_top = -127.0
offset_right = 191.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_dnd51")
theme_override_font_sizes/font_size = 60
text = "DoDgE tHe CrEePs !"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = 89.0
offset_right = 113.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_dnd51")
theme_override_font_sizes/font_size = 60
text = "Start"

[node name="Countdown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Countdown" to="." method="_on_countdown_timeout"]
